--- a/index.html
+++ b/index.html
@@ -126,31 +126,17 @@
           <p class="strip-3-desc">Explore our fashion gallery.</p>
         </div>
         <div id="fashion-gallery" class="strip-3-gallery">
-          <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img">
-          </a>
-          <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img">
-          </a>
-          <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img">
-          </a>
-          <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img">
-          </a>
-          <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img">
-          </a>
-          <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
-          </a>
+          <!-- Only first 6 images are visible -->
+          <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img"></a>
+          <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img"></a>
+          <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img"></a>
+          <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img"></a>
+          <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img"></a>
+          <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img"></a>
           <!-- Hidden images for full gallery (Fashion) -->
-          <!-- Only first 6 images are visible, rest are hidden for LightGallery -->
           <a href="images/img_7.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_7.jpg" alt="Fashion 7" class="strip-3-img"></a>
           <a href="images/img_8.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_8.jpg" alt="Fashion 8" class="strip-3-img"></a>
           <a href="images/img_9.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_9.jpg" alt="Fashion 9" class="strip-3-img"></a>
-          <!-- ...existing code for images 10-50... -->
-          <!-- Example for images 10-50 -->
           <a href="images/img_10.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_10.jpg" alt="Fashion 10" class="strip-3-img"></a>
           <!-- Repeat for images 11-50 -->
           <a href="images/img_11.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_11.jpg" alt="Fashion 11" class="strip-3-img"></a>
@@ -171,29 +157,17 @@
           <p class="strip-4-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our jewellery gallery.</p>
         </div>
         <div id="jewellery-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
-          <a href="images/img_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_2.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_2.jpg" alt="Jewellery 2" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_3.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_3.jpg" alt="Jewellery 3" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_4.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_4.jpg" alt="Jewellery 4" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_5.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_5.jpg" alt="Jewellery 5" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
-          </a>
+          <!-- Only first 6 images are visible -->
+          <a href="images/img_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_2.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_2.jpg" alt="Jewellery 2" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_3.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_3.jpg" alt="Jewellery 3" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_4.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_4.jpg" alt="Jewellery 4" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_5.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_5.jpg" alt="Jewellery 5" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img"></a>
           <!-- Hidden images for full gallery (Jewellery) -->
           <a href="images/img_7.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_7.jpg" alt="Jewellery 7" class="strip-4-img strip-3-img"></a>
           <a href="images/img_8.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_8.jpg" alt="Jewellery 8" class="strip-4-img strip-3-img"></a>
           <a href="images/img_9.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_9.jpg" alt="Jewellery 9" class="strip-4-img strip-3-img"></a>
-          <!-- ...existing code for images 10-50... -->
           <a href="images/img_10.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_10.jpg" alt="Jewellery 10" class="strip-4-img strip-3-img"></a>
           <!-- Repeat for images 11-50 -->
           <a href="images/img_11.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_11.jpg" alt="Jewellery 11" class="strip-4-img strip-3-img"></a>
@@ -214,29 +188,17 @@
           <p class="strip-5-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our food gallery.</p>
         </div>
         <div id="food-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
-          <a href="images/img_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_1.jpg" alt="Food 1" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_2.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_2.jpg" alt="Food 2" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_3.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_3.jpg" alt="Food 3" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_4.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_4.jpg" alt="Food 4" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_5.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_5.jpg" alt="Food 5" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
-          </a>
+          <!-- Only first 6 images are visible -->
+          <a href="images/img_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_1.jpg" alt="Food 1" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_2.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_2.jpg" alt="Food 2" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_3.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_3.jpg" alt="Food 3" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_4.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_4.jpg" alt="Food 4" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_5.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_5.jpg" alt="Food 5" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_6.jpg" alt="Food 6" class="strip-5-img strip-3-img"></a>
           <!-- Hidden images for full gallery (Food) -->
           <a href="images/img_7.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_7.jpg" alt="Food 7" class="strip-5-img strip-3-img"></a>
           <a href="images/img_8.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_8.jpg" alt="Food 8" class="strip-5-img strip-3-img"></a>
           <a href="images/img_9.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_9.jpg" alt="Food 9" class="strip-5-img strip-3-img"></a>
-          <!-- ...existing code for images 10-50... -->
           <a href="images/img_10.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_10.jpg" alt="Food 10" class="strip-5-img strip-3-img"></a>
           <!-- Repeat for images 11-50 -->
           <a href="images/img_11.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_11.jpg" alt="Food 11" class="strip-5-img strip-3-img"></a>
