--- a/index.html
+++ b/index.html
@@ -126,24 +126,12 @@
           <p class="strip-3-desc">Explore our fashion gallery.</p>
         </div>
         <div id="fashion-gallery" class="strip-3-gallery">
-          <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img">
-          </a>
-          <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img">
-          </a>
-          <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img">
-          </a>
-          <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img">
-          </a>
-          <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img">
-          </a>
-          <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-            <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
-          </a>
+          <a href="single.html#fashion-gallery" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion" target="_blank"><img src="images/img_1.jpg" alt="" class="strip-3-img"></a>
+          <a href="single.html#fashion-gallery" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion" target="_blank"><img src="images/img_2.jpg" alt="" class="strip-3-img"></a>
+          <a href="single.html#fashion-gallery" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion" target="_blank"><img src="images/img_3.jpg" alt="" class="strip-3-img"></a>
+          <a href="single.html#fashion-gallery" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion" target="_blank"><img src="images/img_4.jpg" alt="" class="strip-3-img"></a>
+          <a href="single.html#fashion-gallery" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion" target="_blank"><img src="images/img_5.jpg" alt="" class="strip-3-img"></a>
+          <a href="single.html#fashion-gallery" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion" target="_blank"><img src="images/img_6.jpg" alt="" class="strip-3-img"></a>
         </div>
         <div class="strip-3-explore text-center mt-4">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
@@ -159,24 +147,12 @@
           <p class="strip-4-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our jewellery gallery.</p>
         </div>
         <div id="jewellery-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
-          <a href="images/img_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_2.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_2.jpg" alt="Jewellery 2" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_3.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_3.jpg" alt="Jewellery 3" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_4.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_4.jpg" alt="Jewellery 4" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_5.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_5.jpg" alt="Jewellery 5" class="strip-4-img strip-3-img">
-          </a>
-          <a href="images/img_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/img_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
-          </a>
+          <a href="single.html#jewellery-gallery" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery" target="_blank"><img src="images/img_1.jpg" alt="" class="strip-4-img strip-3-img"></a>
+          <a href="single.html#jewellery-gallery" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery" target="_blank"><img src="images/img_2.jpg" alt="" class="strip-4-img strip-3-img"></a>
+          <a href="single.html#jewellery-gallery" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery" target="_blank"><img src="images/img_3.jpg" alt="" class="strip-4-img strip-3-img"></a>
+          <a href="single.html#jewellery-gallery" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery" target="_blank"><img src="images/img_4.jpg" alt="" class="strip-4-img strip-3-img"></a>
+          <a href="single.html#jewellery-gallery" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery" target="_blank"><img src="images/img_5.jpg" alt="" class="strip-4-img strip-3-img"></a>
+          <a href="single.html#jewellery-gallery" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery" target="_blank"><img src="images/img_6.jpg" alt="" class="strip-4-img strip-3-img"></a>
         </div>
         <div class="strip-4-explore text-center mt-4" style="padding-bottom: 32px;">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
@@ -192,24 +168,12 @@
           <p class="strip-5-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our food gallery.</p>
         </div>
         <div id="food-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
-          <a href="images/img_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_1.jpg" alt="Food 1" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_2.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_2.jpg" alt="Food 2" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_3.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_3.jpg" alt="Food 3" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_4.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_4.jpg" alt="Food 4" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_5.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_5.jpg" alt="Food 5" class="strip-5-img strip-3-img">
-          </a>
-          <a href="images/img_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/img_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
-          </a>
+          <a href="single.html#food-gallery" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food" target="_blank"><img src="images/img_1.jpg" alt="" class="strip-5-img strip-3-img"></a>
+          <a href="single.html#food-gallery" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food" target="_blank"><img src="images/img_2.jpg" alt="" class="strip-5-img strip-3-img"></a>
+          <a href="single.html#food-gallery" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food" target="_blank"><img src="images/img_3.jpg" alt="" class="strip-5-img strip-3-img"></a>
+          <a href="single.html#food-gallery" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food" target="_blank"><img src="images/img_4.jpg" alt="" class="strip-5-img strip-3-img"></a>
+          <a href="single.html#food-gallery" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food" target="_blank"><img src="images/img_5.jpg" alt="" class="strip-5-img strip-3-img"></a>
+          <a href="single.html#food-gallery" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food" target="_blank"><img src="images/img_6.jpg" alt="" class="strip-5-img strip-3-img"></a>
         </div>
         <div class="strip-5-explore text-center mt-4" style="padding-bottom: 32px;">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
