--- a/index.html
+++ b/index.html
@@ -451,7 +451,15 @@
     }
     @media (max-width: 991.98px) {
       .strip-3-inner {
-        padding: 0 8px;
+        padding: 0 18px;
+      }
+      .strip-4-inner {
+        padding-left: 18px !important;
+        padding-right: 18px !important;
+      }
+      .strip-5-inner {
+        padding-left: 18px !important;
+        padding-right: 18px !important;
       }
       .strip-3-title {
         font-size: 1.5rem;
