--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li class="has-children">
-                  <a href="single.html">Gallery</a>
+                  <a href="Gallery.html">Gallery</a>
                   <ul class="dropdown">
                     <li><a href="#">Fashion</a></li>
                     <li><a href="#">Food</a></li>
@@ -143,7 +143,7 @@
           </a>
         </div>
         <div class="strip-3-explore text-center mt-4">
-          <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
+          <a href="Fashion.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
     </section>
@@ -176,7 +176,7 @@
           </a>
         </div>
         <div class="strip-4-explore text-center mt-4" style="padding-bottom: 32px;">
-          <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
+          <a href="Product.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
     </section>
@@ -209,7 +209,7 @@
           </a>
         </div>
         <div class="strip-5-explore text-center mt-4" style="padding-bottom: 32px;">
-          <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
+          <a href="Food.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
     </section>
@@ -232,7 +232,7 @@
             <span class="footer-section-title">Sitemap</span>
             <span class="footer-links ml-2">
               <a href="index.html">Home</a> |
-              <a href="single.html">Gallery</a> |
+              <a href="Gallery.html">Gallery</a> |
               <a href="video.html">Video</a> |
               <a href="about.html">About</a> |
               <a href="contact.html">Contact</a>
