--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <li class="has-children">
                   <a href="Gallery.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Fashion</a></li>
-                    <li><a href="#">Food</a></li>
-                    <li><a href="#">Product</a></li>
+                    <li><a href="Fashion.html">Fashion</a></li>
+                    <li><a href="Food.html">Food</a></li>
+                    <li><a href="Product.html">Product</a></li>
                   </ul>
                 </li>
                 <li><a href="video.html">Video</a></li>
