--- a/Gallery.html
+++ b/Gallery.html
@@ -47,7 +47,7 @@
       <div class="container-fluid">
         <div class="row align-items-center">
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="site-logo"><img src="tvwlogo.png" alt="The Vedic Wedding Logo"><span class="sr-only">Pallab Photography</span></a></h1>
+            <h1 class="mb-0"><a href="index.html" class="site-logo"><img src="Pallab-Photography.png" alt="Pallab Photography Logo"><span class="sr-only">Pallab Photography</span></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -82,9 +82,6 @@
                 </li>
                 <li>
                   <a href="https://www.instagram.com/pallabphotography_" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-               
                 </li>
               </ul>
             </div>
