--- a/Gallery.html
+++ b/Gallery.html
@@ -43,6 +43,7 @@
 
 
 
+    <!-- ======= NAVIGATOR SECTION START ======= -->
     <header class="site-navbar py-3 navbar-solid" role="banner" style="position:fixed; top:0; left:0; width:100%; background:#fff; z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.06);">
       <div class="container-fluid">
         <div class="row align-items-center">
@@ -54,11 +55,11 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children active">
-                  <a href="single.html">Gallery</a>
+                  <a href="Gallery.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Fashion</a></li>
-                    <li><a href="#">Food</a></li>
-                    <li><a href="#">Product</a></li>
+                    <li><a href="Fashion.html">Fashion</a></li>
+                    <li><a href="Food.html">Food</a></li>
+                    <li><a href="Product.html">Product</a></li>
                     
                   </ul>
                 </li>
@@ -90,6 +91,7 @@
         </div>
       </div>
     </header>
+    <!-- ======= NAVIGATOR SECTION END ======= -->
 
     <script>
       // Adjust body padding-top to navbar height to prevent content overlap
@@ -105,6 +107,7 @@
 
 
 
+    <!-- ======= FOOTER SECTION START ======= -->
     <footer class="site-footer-custom redesigned-footer">
       <div class="container-fluid">
         <div class="row align-items-center py-3">
@@ -122,7 +125,7 @@
             <span class="footer-section-title">Sitemap</span>
             <span class="footer-links ml-2">
               <a href="index.html">Home</a> |
-              <a href="single.html">Gallery</a> |
+              <a href="Gallery.html">Gallery</a> |
               
               <a href="about.html">About</a> |
               <a href="contact.html">Contact</a>
@@ -138,6 +141,7 @@
         </div>
       </div>
     </footer>
+    <!-- ======= FOOTER SECTION END ======= -->
 
     <style>
       .site-footer-custom.redesigned-footer {
