--- a/Fashion.html
+++ b/Fashion.html
@@ -97,6 +97,39 @@
       // Adjust body padding-top to navbar height to prevent content overlap
       document.addEventListener('DOMContentLoaded', function() {
         var navbar = document.querySelector('.site-navbar');
+  <!-- ======= FOOTER SECTION START ======= -->
+  <footer class="site-footer-custom redesigned-footer">
+    <div class="container-fluid">
+      <div class="row align-items-center py-3">
+        <div class="col-12 col-md-4 text-center text-md-left mb-2 mb-md-0">
+          <span class="footer-section-title">Socials</span>
+          <span class="footer-social-icons ml-2">
+            <a href="https://www.facebook.com/pallabphotography.in" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
+            <a href="https://www.pinterest.com/*" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
+            <a href="https://www.behance.net/*" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
+            <a href="https://www.instagram.com/pallabphotography_" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
+          </span>
+        </div>
+        <div class="col-12 col-md-4 text-center mb-2 mb-md-0">
+          <span class="footer-section-title">Sitemap</span>
+          <span class="footer-links ml-2">
+            <a href="index.html">Home</a> |
+            <a href="Gallery.html">Gallery</a> |
+            <a href="about.html">About</a> |
+            <a href="contact.html">Contact</a>
+          </span>
+        </div>
+        <div class="col-12 col-md-4 text-center text-md-right">
+          <span class="footer-section-title">Contact</span>
+          <span class="footer-contact ml-2">
+            <a href="mailto:pallabphotographykolkata@gmail.com">pallabphotographykolkata@gmail.com</a>
+          </span>
+          <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- ======= FOOTER SECTION END ======= -->
         if (navbar) {
           document.body.style.paddingTop = navbar.offsetHeight + 'px';
         }
