--- a/Fashion.html
+++ b/Fashion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Gallery &mdash; Pallab Photography </title>
+  <title>Fashion &mdash; Pallab Photography </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
