--- a/Fashion.html
+++ b/Fashion.html
@@ -115,6 +115,70 @@
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
   <script src="js/jquery.countdown.min.js"></script>
+
+    <div class="site-section"  data-aos="fade">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-md-7">
+            <div class="row mb-5">
+              <div class="col-12 ">
+                <h2 class="site-section-heading text-center text-black">Portrait Gallery</h2>
+                <div class="gallery-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.15rem;color:#444;">
+                  <!-- Write your gallery description here -->
+                  <p>Welcome to our portrait gallery. Discover a curated selection of our favorite moments, capturing the essence and personality of each subject. Enjoy browsing the collection!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" id="lightgallery">
+          <!-- ...existing gallery items... -->
+        </div>
+      </div>
+    </div>
+    <!-- ======= FOOTER SECTION START ======= -->
+    <footer class="site-footer-custom redesigned-footer">
+      <div class="container-fluid">
+        <div class="row align-items-center py-3">
+          <div class="col-12 col-md-4 text-center text-md-left mb-2 mb-md-0">
+            <span class="footer-section-title">Socials</span>
+            <span class="footer-social-icons ml-2">
+              <a href="https://www.facebook.com/pallabphotography.in" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
+              <a href="https://www.pinterest.com/*" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
+              <a href="https://www.behance.net/*" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
+              <a href="https://www.instagram.com/pallabphotography_" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
+            </span>
+          </div>
+          <div class="col-12 col-md-4 text-center mb-2 mb-md-0">
+            <span class="footer-section-title">Sitemap</span>
+            <span class="footer-links ml-2">
+              <a href="index.html">Home</a> |
+              <a href="Gallery.html">Gallery</a> |
+              <a href="about.html">About</a> |
+              <a href="contact.html">Contact</a>
+            </span>
+          </div>
+          <div class="col-12 col-md-4 text-center text-md-right">
+            <span class="footer-section-title">Contact</span>
+            <span class="footer-contact ml-2">
+              <a href="mailto:pallabphotographykolkata@gmail.com">pallabphotographykolkata@gmail.com</a>
+            </span>
+            <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- ======= FOOTER SECTION END ======= -->
+  </div>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/bootstrap-datepicker.min.js"></script>
   <script src="js/swiper.min.js"></script>
@@ -191,61 +255,6 @@
 
 </body>
 </html>
-
-
-
-
-    <div class="site-section"  data-aos="fade">
-      <div class="container-fluid">
-
-        <div class="row justify-content-center">
-
-          <div class="col-md-7">
-            <div class="row mb-5">
-              <div class="col-12 ">
-                <h2 class="site-section-heading text-center text-black">Portrait Gallery</h2>
-                <div class="gallery-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.15rem;color:#444;">
-                  <!-- Write your gallery description here -->
-                  <p>Welcome to our portrait gallery. Discover a curated selection of our favorite moments, capturing the essence and personality of each subject. Enjoy browsing the collection!</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <div class="row" id="lightgallery">
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_1.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-            <a href="#"><img src="images/nature_small_1.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
-            <a href="#"><img src="images/nature_small_2.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_3.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
-            <a href="#"><img src="images/nature_small_3.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_4.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis quae iusto omnis praesentium labore tempore eligendi quo corporis sapiente.</p>">
-            <a href="#"><img src="images/nature_small_4.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_5.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, voluptatum voluptate tempore aliquam, dolorem distinctio. In quas maiores tenetur sequi.</p>">
-            <a href="#"><img src="images/nature_small_5.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_6.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cum culpa blanditiis illum, voluptatum iusto quisquam mollitia debitis quaerat maiores?</p>">
-            <a href="#"><img src="images/nature_small_6.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_7.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores similique impedit possimus, laboriosam enim at placeat nihil voluptatibus voluptate hic!</p>">
-            <a href="#"><img src="images/nature_small_7.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_8.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam vitae sed cum mollitia itaque soluta laboriosam eaque sit ratione, aliquid.</p>">
-            <a href="#"><img src="images/nature_small_8.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_9.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis debitis beatae facilis quos, enim quis nobis magnam architecto earum!</p>">
-            <a href="#"><img src="images/nature_small_9.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
-
-          <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_9.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque officiis magnam, facilis nam eos perspiciatis eligendi pariatur numquam debitis quos!</p>">
-            <a href="#"><img src="images/nature_small_9.jpg" alt="IMage" class="img-fluid"></a>
-          </div>
           <div class="col-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_8.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur quam et, delectus, cum iste ipsa animi eligendi obcaecati nemo.</p>">
             <a href="#"><img src="images/nature_small_8.jpg" alt="IMage" class="img-fluid"></a>
           </div>
