--- a/Food.html
+++ b/Food.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Gallery &mdash; Pallab Photography </title>
+  <title>Food &mdash; Pallab Photography </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -113,7 +113,7 @@
           <div class="col-md-7">
             <div class="row mb-5">
               <div class="col-12 ">
-                <h2 class="site-section-heading text-center text-black">Portrait Gallery</h2>
+                <h2 class="site-section-heading text-center text-black">Food Gallery</h2>
                 <div class="gallery-description text-center mb-4" style="max-width:700px;margin:0 auto 2rem auto;font-size:1.15rem;color:#444;">
                   <!-- Write your gallery description here -->
                   <p>Welcome to our portrait gallery. Discover a curated selection of our favorite moments, capturing the essence and personality of each subject. Enjoy browsing the collection!</p>
