--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home &mdash; The Vedic Wedding</title>
+  <title>Home &mdash; Pallab Photography</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -42,7 +42,7 @@
       <div class="container-fluid">
         <div class="row align-items-center">
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="site-logo"><img src="tvwlogo.png" alt="The Vedic Wedding Logo"><span class="sr-only">The Vedic Wedding</span></a></h1>
+            <h1 class="mb-0"><a href="index.html" class="site-logo"><img src="Pallab-Photography.png" alt="Pallab Photography Logo"><span class="sr-only">Pallab Photography</span></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -119,8 +119,8 @@
     <section class="strip-3">
       <div class="strip-3-inner">
         <div class="strip-3-header text-center">
-          <h2 class="strip-3-title">Fashion Gallery</h2>
-          <p class="strip-3-desc">Explore our fashion gallery.</p>
+          <h2 class="strip-3-title">Fashion Photography Gallery</h2>
+          <p class="strip-3-desc">Explore our fashion photography gallery.</p>
         </div>
         <div id="fashion-gallery" class="strip-3-gallery">
           <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
@@ -152,8 +152,8 @@
     <section class="strip-4" style="background: #fff; padding: 64px 0 48px 0;">
       <div class="strip-4-inner" style="max-width: 1200px; margin: 0 auto; padding: 0 18px;">
         <div class="strip-4-header text-center" style="margin-bottom: 32px; padding-top: 32px;">
-          <h2 class="strip-4-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Jewellery Gallery</h2>
-          <p class="strip-4-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our jewellery gallery.</p>
+          <h2 class="strip-4-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Food Photography Gallery</h2>
+          <p class="strip-4-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our Food photography gallery.</p>
         </div>
         <div id="jewellery-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
           <a href="images/img_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
@@ -176,7 +176,7 @@
           </a>
         </div>
         <div class="strip-4-explore text-center mt-4" style="padding-bottom: 32px;">
-          <a href="Product.html" class="btn btn-lg btn-explore">Explore</a>
+          <a href="Food.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
     </section>
@@ -185,8 +185,8 @@
     <section class="strip-5" style="background: #f8f6f2; padding: 64px 0 48px 0;">
       <div class="strip-5-inner" style="max-width: 1200px; margin: 0 auto; padding: 0 18px;">
         <div class="strip-5-header text-center" style="margin-bottom: 32px; padding-top: 32px;">
-          <h2 class="strip-5-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Food Gallery</h2>
-          <p class="strip-5-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our food gallery.</p>
+          <h2 class="strip-5-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Product Photography Gallery</h2>
+          <p class="strip-5-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our product photography gallery.</p>
         </div>
         <div id="food-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
           <a href="images/img_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
@@ -209,7 +209,7 @@
           </a>
         </div>
         <div class="strip-5-explore text-center mt-4" style="padding-bottom: 32px;">
-          <a href="Food.html" class="btn btn-lg btn-explore">Explore</a>
+          <a href="Product.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
     </section>
@@ -233,7 +233,7 @@
             <span class="footer-links ml-2">
               <a href="index.html">Home</a> |
               <a href="Gallery.html">Gallery</a> |
-              <a href="video.html">Video</a> |
+         
               <a href="about.html">About</a> |
               <a href="contact.html">Contact</a>
             </span>
@@ -241,9 +241,9 @@
           <div class="col-12 col-md-4 text-center text-md-right">
             <span class="footer-section-title">Contact</span>
             <span class="footer-contact ml-2">
-              <a href="mailto:info@thevedicwedding.com">thevedicwedding@gmail.com</a>
+              <a href="mailto:pallabphotographykolkata@gmail.com">pallabphotographykolkata@gmail.com</a>
             </span>
-            <div class="footer-copyright mt-2">© 2025 the vedic wedding</div>
+            <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
           </div>
         </div>
       </div>
