--- a/index.html
+++ b/index.html
@@ -372,6 +372,36 @@
       opacity: 1;
       transform: translateX(0);
     }
+    /* Strip 4: Food/Jewellery Gallery Styles (right to left animation) */
+    .strip-4 {
+      width: 100vw;
+      background: #fff;
+      padding: 64px 0 48px 0;
+      position: relative;
+      z-index: 1;
+      opacity: 0;
+      transform: translateX(80px);
+      transition: opacity 0.8s cubic-bezier(.23,1,.32,1), transform 0.8s cubic-bezier(.23,1,.32,1);
+    }
+    .strip-4.glide-in {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    /* Strip 5: Product/Food Gallery Styles (left to right animation) */
+    .strip-5 {
+      width: 100vw;
+      background: #f8f6f2;
+      padding: 64px 0 48px 0;
+      position: relative;
+      z-index: 1;
+      opacity: 0;
+      transform: translateX(-80px);
+      transition: opacity 0.8s cubic-bezier(.23,1,.32,1), transform 0.8s cubic-bezier(.23,1,.32,1);
+    }
+    .strip-5.glide-in {
+      opacity: 1;
+      transform: translateX(0);
+    }
     .strip-3-inner {
       max-width: 1200px;
       margin: 0 auto;
@@ -615,8 +645,36 @@
           }
         }
       }
+      // Animate Strip 4 on scroll (GLIDE from right to left)
+      function glideStrip4() {
+        var $strip4 = $('.strip-4');
+        if ($strip4.length) {
+          var winScroll = $(window).scrollTop();
+          var winHeight = $(window).height();
+          var strip4Offset = $strip4.offset().top;
+          if (winScroll + winHeight > strip4Offset + 100) {
+            $strip4.addClass('glide-in');
+          }
+        }
+      }
+      // Animate Strip 5 on scroll (GLIDE from left to right)
+      function glideStrip5() {
+        var $strip5 = $('.strip-5');
+        if ($strip5.length) {
+          var winScroll = $(window).scrollTop();
+          var winHeight = $(window).height();
+          var strip5Offset = $strip5.offset().top;
+          if (winScroll + winHeight > strip5Offset + 100) {
+            $strip5.addClass('glide-in');
+          }
+        }
+      }
       $(window).on('scroll', glideStrip3);
+      $(window).on('scroll', glideStrip4);
+      $(window).on('scroll', glideStrip5);
       glideStrip3();
+      glideStrip4();
+      glideStrip5();
       // Initialize LightGallery for Fashion Gallery
       if ($('#fashion-gallery').length && typeof $.fn.lightGallery === 'function') {
         $('#fashion-gallery').lightGallery({
