--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <!-- End Strip 1 -->
     <!-- Strip 2: Text & Image Split Section -->
     <section class="strip-2">
-      <div class="strip-2-inner" data-stellar-background-ratio="0.5" style="background-image: url('images/img_1.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat;">
-        <div class="strip-2-content" style="background: rgba(255,255,255,0.85); border-radius: 18px; padding: 32px;">
+      <div class="strip-2-inner">
+        <div class="strip-2-content">
           <div class="strip-2-left">
             <h1 class="strip-2-title">Luxury Wedding Experience</h1>
             <p class="strip-2-desc">Experience the elegance and tradition of a Vedic wedding. Our team crafts unforgettable moments with a touch of luxury and timeless beauty. Discover the art of celebration, where every detail is curated for perfection.</p>
@@ -223,7 +223,7 @@
               <a href="https://www.pinterest.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
               <a href="https://www.behance.net/thevedicwedding" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
               <a href="https://www.instagram.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
-            
+           
             </span>
           </div>
           <div class="col-12 col-md-4 text-center mb-2 mb-md-0">
@@ -801,3 +801,4 @@
 
 </body>
 </html>
+
